<resources>
    <string name="app_name">Lab 8</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">Sup</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_message">The switch is</string>
    <string name="edit_message">Type here</string>
    <string name="gui">Look at my GUI</string>
    <string name="clickHere">Click Here</string>
    <string name="checkOut">Check this out!</string>
    <string name="switch_message">Switch on/off</string>
    <string name="undo">Undo</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="toChat">To Chat</string>
    <string name="yourProfile">Your Profile</string>
    <string name="yourName">Your Name</string>
    <string name="enterName">Enter Your Name</string>
    <string name="yourEmail">Your Email</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="yourPicture">Your Picture</string>
    <string name="clickPic">Click the button above to take a picture</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
